hot fix overflow-x hidden

--- a/sass/escritorio.scss
+++ b/sass/escritorio.scss
@@ -40,6 +40,7 @@
             .main__plans{
                 .plans__card{
                     justify-content: space-evenly;
+                    overflow-x: hidden;
                 }
             }
     }
