--- a/sass/tablet.scss
+++ b/sass/tablet.scss
@@ -24,6 +24,7 @@
             .main__plans{
                 .plans__card{
                     justify-content: space-evenly;
+                    overflow-x: hidden;
                 }
             }
     }
